--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding changes before rebasing conflicts
 -->
 <head>
-	<title>A very respective website</title>
+	<title>A very respsdasdadasective website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content dafasdfasd
 		</p>
 	</main>
 	<footer class="container">
