--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2020 
-	Adding changes before rebasing conflicts
+	
 -->
 <head>
-	<title>A very respsdasdadasective website</title>
+	<title>A very respsdasdadasective website repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
