--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	
 -->
 <head>
-	<title>A very respsdasdadasective website repo</title>
+	<title>Updating title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just somefdsfdsfds content
+			Just somefdsfdsfds content more stuff
 		</p>
 	</main>
 	<footer class="container">
