--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	
 -->
 <head>
-	<title>Updating title</title>
+	<title>Updating title again</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
